--- a/.gitignore
+++ b/.gitignore
@@ -99,3 +99,11 @@ ENV/
 
 # mypy
 .mypy_cache/
+
+# VisualStudioCode.gitignore
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
